--- a/maubot.yaml
+++ b/maubot.yaml
@@ -1,8 +1,9 @@
 maubot: 0.1.0
 id: xyz.maubot.talks_bridge
-version: 0.1.4
+version: 0.1.23
 license: GPL
 modules:
 - jsonpickle
 - echo
-main_class: echo/EchoBot
+- bridge
+main_class: bridge/BridgeBot
