--- a/maubot.yaml
+++ b/maubot.yaml
@@ -1,9 +1,10 @@
 maubot: 0.1.0
 id: xyz.maubot.talks_bridge
-version: 0.1.25
+version: 0.1.67
 license: GPL
 modules:
 - jsonpickle
-- echo
+- requests
+- cachetools
 - bridge
 main_class: bridge/BridgeBot
