--- a/maubot.yaml
+++ b/maubot.yaml
@@ -1,10 +1,14 @@
 maubot: 0.1.0
 id: xyz.maubot.talks_bridge
-version: 0.2.19
+version: 0.2.24
 license: GPL
 modules:
-- jsonpickle
-- cachetools
-- requests
-- bridge
+  - jsonpickle
+  - cachetools
+  - requests
+  - config
+  - bridge
 main_class: bridge/BridgeBot
+config: true
+extra_files:
+  - base-config.yaml
