--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,6 +1,6 @@
-matrix_bot_user : "@bot:logicas.org"
+matrix_bot_user : "@bot:example.com"
 
-talks_server : "192.168.1.141"
+talks_server : "127.0.0.1"
 talks_port : 8080
 talks_protocol : "http"
 talks_receive_message : "/matrix/receiveMessage"
@@ -13,6 +13,7 @@ bot_off_regex : '.*Hola!.*'
 hints : true
 
 deduplication_cache_size : 1024
+echo_cache_size : 1024
 fixed_timeout : 3.05
 message_fetcher_delay : 0.2
 message_propagator_delay : 0.5
