--- a/maubot.yaml
+++ b/maubot.yaml
@@ -1,6 +1,6 @@
 maubot: 0.1.0
-id: xyz.maubot.talks_bridge
-version: 0.2.25
+id: xyz.maubot.talks_bridge_survey
+version: 0.3.3
 license: GPL
 modules:
   - jsonpickle
